Normalize the style

--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!doctype html>
-<html lang="zh-Hant-TW" class="h-100">
+<html class="h-100" lang="zh-Hant-TW">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>Homepage</title>
-
-<!--    <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/cover/">-->
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -19,18 +17,18 @@
         <div>
             <h3 class="float-md-start mb-0">CyberSoft Notification</h3>
             <nav class="nav nav-masthead justify-content-center float-md-end">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                <a class="nav-link" href="register-admin.html">Admin register</a>
-                <a class="nav-link" href="register-user.html">User register</a>
+                <a aria-current="page" class="nav-link active" href="#">Home</a>
+                <a class="nav-link" href="register-admin.html">Admin Subscribe</a>
+                <a class="nav-link" href="register-user.html">User Subscribe</a>
             </nav>
         </div>
     </header>
 
     <main class="px-3">
-        <h1>服務註冊</h1>
+        <h1>服務訂閱</h1>
         <p class="lead">服務通知、客製化</p>
         <p class="lead">
-            <a href="register.html" class="btn btn-lg btn-secondary fw-bold border-white bg-white">註冊</a>
+            <a class="btn btn-lg btn-secondary fw-bold border-white bg-white" href="register.html">註冊</a>
         </p>
     </main>
 
