--- a/register-admin.html
+++ b/register-admin.html
@@ -15,28 +15,53 @@
         .container {
             max-width: 960px;
         }
+
+        /* Header */
+        .nav-masthead .nav-link {
+            padding: .25rem 0;
+            font-weight: 700;
+            color: rgba(255, 255, 255, .5);
+            background-color: transparent;
+            border-bottom: .25rem solid transparent;
+        }
+
+        .nav-masthead .nav-link:hover,
+        .nav-masthead .nav-link:focus {
+            border-bottom-color: rgba(255, 255, 255, .25);
+        }
+
+        .nav-masthead .nav-link + .nav-link {
+            margin-left: 1rem;
+        }
+
+        .nav-masthead .active {
+            color: #fff;
+            border-bottom-color: #fff;
+        }
     </style>
 </head>
 <body class="bg-light">
 
 <div class="container p-3">
-    <header class="mb-auto">
-        <div>
-            <h3 class="float-md-start mb-0">CyberSoft Notification</h3>
+
+    <header class="navbar navbar-light fixed-top bg-dark">
+        <div class="container-fluid">
+            <h3 class="float-md-start mb-0 navbar-brand text-white">CyberSoft Notification</h3>
             <nav class="nav nav-masthead justify-content-center float-md-end">
                 <a class="nav-link" href="index.html">Home</a>
-                <a aria-current="page" class="nav-link active" href="#">Admin register</a>
-                <a class="nav-link" href="register-user.html">User register</a>
+                <a aria-current="page" class="nav-link active" href="#">Admin Subscribe</a>
+                <a class="nav-link" href="register-user.html">User Subscribe</a>
             </nav>
         </div>
     </header>
 
-    <main>
+
+    <main class="pt-5">
         <div class="py-5 text-center">
             <img alt="logo" class="d-block mx-auto mb-4" height="60"
-                 src="https://www.cybersoft4u.com/images/layout/logo.png">
-            <h2>註冊表單</h2>
-            <p class="lead">根據需求選擇需要的項目並送出</p>
+                 src="assets/img/logo.png">
+            <h2>訂閱設定</h2>
+            <p class="lead">選擇想接收到的通知</p>
         </div>
 
 
@@ -46,13 +71,13 @@
                     <fieldset>
                         <legend>共用信箱</legend>
                         <div class="table-responsive">
-                            <table class="table table-hover caption-top" id="sharedEmailTable">
+                            <table class="table caption-top" id="sharedEmailTable">
                                 <caption>Email</caption>
                                 <thead class="table-dark container">
                                 <tr class="row-cols-12">
                                     <th class="col-3" scope="col">名稱</th>
                                     <th class="col-5" scope="col">Email</th>
-                                    <th class="col" scope="col">訂閱事件</th>
+                                    <th class="col" scope="col">通知</th>
                                     <th class="col" scope="col">操作</th>
                                 </tr>
                                 </thead>
@@ -104,8 +129,17 @@
                                 <thead class="table-dark container">
                                 <tr class="row-cols-12">
                                     <th class="col-3" scope="col">名稱</th>
-                                    <th class="col-5" scope="col">Webhook URL</th>
-                                    <th class="col" scope="col">訂閱事件</th>
+                                    <th class="col-5" scope="col">
+                                        Webhook URL
+                                        <a class="text-white"
+                                           data-bs-placement="top"
+                                           data-bs-toggle="tooltip"
+                                           href="https://slack.com/intl/zh-tw/help/articles/115005265063-Slack-%E5%82%B3%E5%85%A5%E7%9A%84-Webhook"
+                                           target="_blank" title="如何取得 Slack webhook URL">
+                                            <i class="bi bi-question-circle"></i>
+                                        </a>
+                                    </th>
+                                    <th class="col" scope="col">通知</th>
                                     <th class="col" scope="col">操作</th>
                                 </tr>
                                 </thead>
@@ -147,8 +181,17 @@
                                 <thead class="table-dark container">
                                 <tr class="row-cols-12">
                                     <th class="col-3" scope="col">名稱</th>
-                                    <th class="col-5" scope="col">Webhook URL</th>
-                                    <th class="col" scope="col">訂閱事件</th>
+                                    <th class="col-5" scope="col">
+                                        Webhook URL
+                                        <a class="text-white"
+                                           data-bs-placement="top"
+                                           data-bs-toggle="tooltip"
+                                           href="https://docs.microsoft.com/en-us/microsoftteams/platform/webhooks-and-connectors/how-to/add-incoming-webhook"
+                                           target="_blank" title="如何取得 Teams webhook URL">
+                                            <i class="bi bi-question-circle"></i>
+                                        </a>
+                                    </th>
+                                    <th class="col" scope="col">通知</th>
                                     <th class="col" scope="col">操作</th>
                                 </tr>
                                 </thead>
@@ -186,96 +229,12 @@
                         </div>
                     </fieldset>
 
-                    <!--<div aria-hidden="true" class="modal fade" data-bs-backdrop="static"
-                         id="staticBackdrop" tabindex="-1">
-                        <div class="modal-dialog modal-dialog-scrollable">
-                            <div class="modal-content">
-                                <div class="modal-header border-bottom-0">
-                                    <h5 class="modal-title">選擇事件</h5>
-                                    <button aria-label="Close" class="btn-close" data-bs-dismiss="modal"
-                                            type="button"></button>
-                                </div>
-                                <div class="modal-body">
-                                    <div class="accordion-item">
-                                        <button aria-controls="succAuthzCollapse" aria-expanded="true"
-                                                class="accordion-button"
-                                                data-bs-target="#succAuthzCollapse"
-                                                data-bs-toggle="collapse" type="button">
-                                            授權
-                                        </button>
-
-                                        <div class="accordion-collapse collapse show" id="succAuthzCollapse">
-                                            <div class="accordion-body">
-                                                <div class="my-3">
-                                                    <div class="form-check">
-                                                        <input class="form-check-input" id="authzStart" name="eventStatus"
-                                                               type="checkbox">
-                                                        <label class="form-check-label">開始</label>
-                                                    </div>
-                                                    <div class="form-check">
-                                                        <input class="form-check-input" id="authzSucc" name="eventStatus"
-                                                               type="checkbox">
-                                                        <label class="form-check-label">成功</label>
-                                                    </div>
-                                                    <div class="form-check">
-                                                        <input class="form-check-input" id="authzFail" name="eventStatus"
-                                                               type="checkbox">
-                                                        <label class="form-check-label">失敗</label>
-                                                    </div>
-                                                </div>
-
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="accordion-item">
-                                        <button aria-controls="failAuthzCollapse" aria-expanded="false"
-                                                class="accordion-button collapsed"
-                                                data-bs-target="#failAuthzCollapse"
-                                                data-bs-toggle="collapse" type="button">
-                                            請款
-                                        </button>
-
-                                        <div class="accordion-collapse collapse" id="failAuthzCollapse">
-                                            <div class="accordion-body">
-                                                <div class="my-3">
-                                                    <div class="form-check">
-                                                        <input class="form-check-input" id="invoiceStart" name="eventStatus"
-                                                               type="checkbox">
-                                                        <label class="form-check-label">開始</label>
-                                                    </div>
-                                                    <div class="form-check">
-                                                        <input class="form-check-input" id="invoiceSucc" name="eventStatus"
-                                                               type="checkbox">
-                                                        <label class="form-check-label">成功</label>
-                                                    </div>
-                                                    <div class="form-check">
-                                                        <input class="form-check-input" id="invoiceFail" name="eventStatus"
-                                                               type="checkbox">
-                                                        <label class="form-check-label">失敗</label>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="modal-footer">
-                                    <button class="btn btn-outline-secondary" data-bs-dismiss="modal" type="button">
-                                        Discard
-                                    </button>
-                                    <button class="btn btn-outline-primary" data-bs-target="#staticBackdrop"
-                                            data-bs-toggle="modal"
-                                            type="button">Save changes
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>-->
                 </div>
             </div>
 
             <div class="row">
                 <div class="col">
-                    <button class="w-100 btn btn-primary" type="submit">Submit</button>
+                    <button class="w-100 btn btn-warning" type="submit">Submit</button>
                 </div>
             </div>
         </form>
@@ -319,7 +278,9 @@
                 }
             });
 
-            const btnAdd = table.querySelector('tfoot button');
+            const buttons = table.querySelectorAll('tfoot button');
+            const btnAdd = buttons.length == 1 ? buttons[0] : buttons.find(btn => btn.firstElementChild.matches('i.bi.bi-plus'));
+
             // Add a row
             btnAdd.addEventListener('click', function () {
                 let type;
@@ -330,9 +291,13 @@
                 }
 
                 const row = table.getElementsByTagName('tbody')[0].insertRow();
-                row.innerHTML = rowTemplate('event' + globalCount.toString(10) , '', type);
+                row.innerHTML = rowTemplate('event' + globalCount.toString(10), '', type);
                 globalCount++;
             });
+        });
+        const tooltipTriggerList = [...document.querySelectorAll('[data-bs-toggle="tooltip"]')];
+        const tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+            return new bootstrap.Tooltip(tooltipTriggerEl);
         });
     })();
 
@@ -352,13 +317,13 @@
         </td>
         <td>
             <button class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#${eventListId}">
-                <i class="bi bi-card-checklist">事件</i>
+                <i class="bi bi-card-checklist"></i>
             </button>
             ${eventTemplate(eventListId)}
         </td>
         <td>
             <button class="btn btn-danger" type="button">
-                <i class="bi bi-trash">刪除</i>
+                <i class="bi bi-trash"></i>
             </button>
         </td>`;
     }
